@@ -3,7 +3,8 @@ Changes from 1.8.0 to 1.7.0
 ** Improvement
     * [FELIX-4101] - Create metatype.properties file when description and label are inlined
     * [FELIX-4126] - Discontinue creation of single XML descriptor files 
-
+    * [FELIX-4170] - Deprecate inheritance of component descriptors
+ 
 
 Changes from 1.7.0 to 1.6.0
 ---------------------------
